<resources>
    <string name="app_name">CoroutineFlow-Course</string>

    <!-- Strings used for fragments for navigation -->
    <string name="main_fragment_label">App Coroutine and Flow Usecases</string>
    <string name="coroutine_usecases_fragment_label">Coroutine Usecases</string>
    <string name="sequential_network_request_callback_fragment_label">Sequential Callback Usecase</string>
    <string name="sequential_network_request_rxjava_fragment_label">Sequential RxJava Usecase</string>
    <string name="sequential_network_request_coroutine_fragment_label">Sequential Coroutine Usecase</string>
    <string name="concurrent_network_request_fragment_label">Concurrent Coroutine Usecase</string>
    <string name="network_request_timeout_fragment_label">Timeout Coroutine Usecase</string>
    <string name="network_request_retry_fragment_label">Retry Coroutine Usecase</string>
    <string name="network_request_timeout_and_retry_fragment_label">Timeout and Retry Coroutine Usecase</string>
    <string name="room_and_coroutine_fragment_label">Room and Coroutine Usecase</string>
    <string name="dispatcher_and_context_coroutine_fragment_label">Dispatcher and Context Usecase</string>
    <string name="calculation_in_several_coroutine_fragment_label">Calculation Several Coroutines Usecase</string>
    <string name="continue_coroutine_when_user_leaves_screen_fragment_label">Continue Coroutine Usecase</string>
    <string name="cooperative_cancellation_fragment_label">Cooperative Cancellation Usecase</string>
    <string name="coroutine_exception_handling_fragment_label">Exception Handling Usecase</string>
    <string name="flow_livedata_usecase_fragment_label">Flow LiveData Usecase</string>
    <string name="flow_shared_flow_usecase_fragment_label">Flow SharedFlow Usecase</string>
    <string name="flow_state_flow_usecase_fragment_label">Flow StateFlow Usecase</string>
    <string name="flow_operators_fragment_label">Flow Operators Usecase</string>
    <string name="flow_exception_handling_fragment_label">Flow Exception Handling Usecase</string>

    <string name="coroutine_usecase">Coroutine usecases</string>
    <string name="flow_usecase">Flow usecases</string>
    <string name="load_features">Load Features</string>
    <string name="load_android_versions">Load Android Versions</string>
    <string name="load_features_sequentially">Load Features Sequentially</string>
    <string name="load_features_concurrently">Load Features Concurrently</string>
    <string name="clear_database">Clear Database</string>
    <string name="loading_data_from_database">Loading data from database</string>
    <string name="loading_data_from_network">Loading data from network</string>
    <string name="calculate">Calculate</string>
    <string name="cancel">Cancel</string>
    <string name="factorial_of">Factorial of</string>
    <string name="number_of_coroutines">Number of coroutines</string>
    <string name="duration_calculation">Calculation took %d ms</string>
    <string name="duration_string_conversion">Converting BigInteger to String took %d ms</string>
    <string name="try_catch">Handle exception using Try/Catch</string>
    <string name="exception_handler">Handle exception using CoroutineExceptionHandler</string>
    <string name="show_result_even_if_child_coroutine_fails">Show result even if child coroutine fails</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>