<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainFragment">

    <fragment
        android:id="@+id/MainFragment"
        android:name="com.example.coroutineflow_course.MainFragment"
        android:label="@string/main_fragment_label"
        tools:layout="@layout/fragment_main">

        <action
            android:id="@+id/action_MainFragment_to_CoroutineUsecasesFragment"
            app:destination="@id/CoroutineUsecasesFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@anim/slide_out" />

    </fragment>

    <fragment
        android:id="@+id/CoroutineUsecasesFragment"
        android:name="com.example.coroutineflow_course.CoroutineUsecasesFragment"
        android:label="@string/coroutine_usecases_fragment_label"
        tools:layout="@layout/fragment_coroutine_usecases">

        <action
            android:id="@+id/action_CoroutineUsecasesFragment_to_SequentialNetworkRequestCallbackFragment"
            app:destination="@id/SequentialNetworkRequestCallbackFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@anim/slide_out" />

        <action
            android:id="@+id/action_CoroutineUsecasesFragment_to_SequentialNetworkRequestRxJavaFragment"
            app:destination="@id/SequentialNetworkRequestRxJavaFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@anim/slide_out" />

        <action
            android:id="@+id/action_CoroutineUsecasesFragment_to_SequentialNetworkRequestCoroutineFragment"
            app:destination="@id/SequentialNetworkRequestCoroutineFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@anim/slide_out" />

        <action
            android:id="@+id/action_CoroutineUsecasesFragment_to_ConcurrentNetworkRequestFragment"
            app:destination="@id/ConcurrentNetworkRequestFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@anim/slide_out" />

        <action
            android:id="@+id/action_CoroutineUsecasesFragment_to_ConcurrentVariableAmountOfNetworkRequestFragment"
            app:destination="@id/ConcurrentVariableAmountOfNetworkRequestFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@anim/slide_out" />

        <action
            android:id="@+id/action_CoroutineUsecasesFragment_to_NetworkRequestWithTimeoutFragment"
            app:destination="@id/NetworkRequestWithTimeoutFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@anim/slide_out" />

        <action
            android:id="@+id/action_CoroutineUsecasesFragment_to_NetworkRequestWithRetryFragment"
            app:destination="@id/NetworkRequestWithRetryFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@anim/slide_out" />

        <action
            android:id="@+id/action_CoroutineUsecasesFragment_to_NetworkRequestWithTimeoutAndRetryFragment"
            app:destination="@id/NetworkRequestWithTimeoutAndRetryFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@anim/slide_out" />

        <action
            android:id="@+id/action_CoroutineUsecasesFragment_to_RoomAndCoroutineFragment"
            app:destination="@id/RoomAndCoroutineFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@anim/slide_out" />

        <action
            android:id="@+id/action_CoroutineUsecasesFragment_to_DispatcherAndContextCoroutineFragment"
            app:destination="@id/DispatcherAndContextCoroutineFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@anim/slide_out" />

        <action
            android:id="@+id/action_CoroutineUsecasesFragment_to_CalculationInSeveralCoroutineFragment"
            app:destination="@id/CalculationInSeveralCoroutineFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@anim/slide_out" />

        <action
            android:id="@+id/action_CoroutineUsecasesFragment_to_ContinueCoroutineWhenUserLeavesScreenFragment"
            app:destination="@id/ContinueCoroutineWhenUserLeavesScreenFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@anim/slide_out" />

        <action
            android:id="@+id/action_CoroutineUsecasesFragment_to_CooperativeCancellationFragment"
            app:destination="@id/CooperativeCancellationFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@anim/slide_out" />

        <action
            android:id="@+id/action_CoroutineUsecasesFragment_to_CoroutineExceptionHandlingFragment"
            app:destination="@id/CoroutineExceptionHandlingFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@anim/slide_out" />

    </fragment>

    <fragment
        android:id="@+id/SequentialNetworkRequestCallbackFragment"
        android:name="com.example.coroutineflow_course.usecases.coroutines.usecase1.callbacks.SequentialNetworkRequestsCallbacksFragment"
        android:label="@string/sequential_network_request_callback_fragment_label"
        tools:layout="@layout/fragment_sequential_network_requests_callbacks">

    </fragment>

    <fragment
        android:id="@+id/SequentialNetworkRequestRxJavaFragment"
        android:name="com.example.coroutineflow_course.usecases.coroutines.usecase1.rxjava.SequentialNetworkRequestsRxJavaFragment"
        android:label="@string/sequential_network_request_rxjava_fragment_label"
        tools:layout="@layout/fragment_sequential_network_requests_rx_java">

    </fragment>

    <fragment
        android:id="@+id/SequentialNetworkRequestCoroutineFragment"
        android:name="com.example.coroutineflow_course.usecases.coroutines.usecase1.coroutine.SequentialNetworkRequestsCoroutineFragment"
        android:label="@string/sequential_network_request_coroutine_fragment_label"
        tools:layout="@layout/fragment_sequential_network_requests_coroutine">

    </fragment>

    <fragment
        android:id="@+id/ConcurrentNetworkRequestFragment"
        android:name="com.example.coroutineflow_course.usecases.coroutines.usecase2.ConcurrentNetworkRequestsFragment"
        android:label="@string/concurrent_network_request_fragment_label"
        tools:layout="@layout/fragment_concurrent_network_requests">

    </fragment>

    <fragment
        android:id="@+id/ConcurrentVariableAmountOfNetworkRequestFragment"
        android:name="com.example.coroutineflow_course.usecases.coroutines.usecase3.VariableAmountOfNetworkRequestsFragment"
        android:label="@string/concurrent_network_request_fragment_label"
        tools:layout="@layout/fragment_variable_amount_of_network_requests">

    </fragment>

    <fragment
        android:id="@+id/NetworkRequestWithTimeoutFragment"
        android:name="com.example.coroutineflow_course.usecases.coroutines.usecase4.NetworkRequestsWithTimeoutFragment"
        android:label="@string/network_request_timeout_fragment_label"
        tools:layout="@layout/fragment_network_requests_with_timeout">

    </fragment>

    <fragment
        android:id="@+id/NetworkRequestWithRetryFragment"
        android:name="com.example.coroutineflow_course.usecases.coroutines.usecase5.NetworkRequestsWithRetryFragment"
        android:label="@string/network_request_retry_fragment_label"
        tools:layout="@layout/fragment_network_requests_with_retry">

    </fragment>

    <fragment
        android:id="@+id/NetworkRequestWithTimeoutAndRetryFragment"
        android:name="com.example.coroutineflow_course.usecases.coroutines.usecase6.NetworkRequestsWithTimeoutAndRetryFragment"
        android:label="@string/network_request_timeout_and_retry_fragment_label"
        tools:layout="@layout/fragment_network_requests_with_timeout_and_retry">

    </fragment>

    <fragment
        android:id="@+id/RoomAndCoroutineFragment"
        android:name="com.example.coroutineflow_course.usecases.coroutines.usecase7.RoomAndCoroutinesFragment"
        android:label="@string/room_and_coroutine_fragment_label"
        tools:layout="@layout/fragment_room_and_coroutines">

    </fragment>

    <fragment
        android:id="@+id/DispatcherAndContextCoroutineFragment"
        android:name="com.example.coroutineflow_course.usecases.coroutines.usecase8.DispatcherAndContextCoroutineFragment"
        android:label="@string/dispatcher_and_context_coroutine_fragment_label"
        tools:layout="@layout/fragment_dispatcher_and_context_coroutine">

    </fragment>

    <fragment
        android:id="@+id/CalculationInSeveralCoroutineFragment"
        android:name="com.example.coroutineflow_course.usecases.coroutines.usecase9.CalculationInSeveralCoroutinesFragment"
        android:label="@string/calculation_in_several_coroutine_fragment_label"
        tools:layout="@layout/fragment_calculation_in_several_coroutines">

    </fragment>

    <fragment
        android:id="@+id/ContinueCoroutineWhenUserLeavesScreenFragment"
        android:name="com.example.coroutineflow_course.usecases.coroutines.usecase10.ContinueCoroutineWhenUserLeavesScreenFragment"
        android:label="@string/continue_coroutine_when_user_leaves_screen_fragment_label"
        tools:layout="@layout/fragment_continue_coroutine_when_user_leaves_screen">

    </fragment>

    <fragment
        android:id="@+id/CooperativeCancellationFragment"
        android:name="com.example.coroutineflow_course.usecases.coroutines.usecase11.CooperativeCancellationFragment"
        android:label="@string/cooperative_cancellation_fragment_label"
        tools:layout="@layout/fragment_cooperative_cancellation">

    </fragment>

    <fragment
        android:id="@+id/CoroutineExceptionHandlingFragment"
        android:name="com.example.coroutineflow_course.usecases.coroutines.usecase12.CoroutineExceptionHandlingFragment"
        android:label="@string/coroutine_exception_handling_fragment_label"
        tools:layout="@layout/fragment_coroutine_exception_handling">

    </fragment>

</navigation>