<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".usecases.coroutines.usecase11.CooperativeCancellationFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_cooperative_cancellation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/factorial_of"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_cooperative_cancellation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_cooperative_cancellation_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calculate"
        app:layout_constraintTop_toBottomOf="@id/til_cooperative_cancellation" />

    <Button
        android:id="@+id/btn_cooperative_cancellation_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/btn_cooperative_cancellation_calculate" />

    <ProgressBar
        android:id="@+id/pb_cooperative_cancellation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_cooperative_cancellation_cancel" />

    <TextView
        android:id="@+id/tv_cooperative_cancellation_factorial_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/pb_cooperative_cancellation" />

    <TextView
        android:id="@+id/tv_cooperative_cancellation_conversion_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_cooperative_cancellation_factorial_time" />

    <TextView
        android:id="@+id/tv_cooperative_cancellation_factorial_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_cooperative_cancellation_conversion_time" />

</androidx.constraintlayout.widget.ConstraintLayout>