<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".usecases.coroutines.usecase9.CalculationInSeveralCoroutinesFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_calculation_several_coroutine_factorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/factorial_of"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_calculation_several_coroutine_factorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_calculation_several_coroutine_coroutines_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/number_of_coroutines"
        app:layout_constraintTop_toBottomOf="@id/til_calculation_several_coroutine_factorial">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_calculation_several_coroutine_coroutines_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_calculation_several_coroutine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calculate"
        app:layout_constraintTop_toBottomOf="@id/til_calculation_several_coroutine_coroutines_number" />

    <ProgressBar
        android:id="@+id/pb_calculation_several_coroutine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_calculation_several_coroutine" />

    <TextView
        android:id="@+id/tv_calculation_several_coroutine_factorial_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/pb_calculation_several_coroutine" />

    <TextView
        android:id="@+id/tv_calculation_several_coroutine_conversion_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_calculation_several_coroutine_factorial_time" />

    <TextView
        android:id="@+id/tv_calculation_several_coroutine_factorial_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_calculation_several_coroutine_conversion_time" />

</androidx.constraintlayout.widget.ConstraintLayout>